welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:11: error: type mismatch;
 found   : Unit
 required: String
  else if (vacation == true && day == 6 || day ==0) {
       ^